--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>SignUp</title>
+    <title>Restaurant Rating</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'; font-src 'self'> -->
@@ -149,7 +149,7 @@
                                         <input type="text" class="form-control" id="restaurant-name" rows="2" cols="40">
                                         <input type="text" class="form-control" id="restaurant-url" rows="2" cols="40">
                                         <input type="text" class="form-control" id="restaurant-rating" rows="2" cols="40">
-                                        <button>Add</button>
+                                        <button class="add">Add</button>
                                     </form>
                                 </div>
                             </form>
